--- a/main.tex
+++ b/main.tex
@@ -623,7 +623,7 @@ To circumvent this drawback, we use the geo-enrichment algorithm described in~\c
 This algorithm uses a gazetteer-based approach to look-up location names and geo-coordinates.
 To identify location-specific tweets, we configure the geocoding tool to first consider the tweet's text for mentions of place names and geographical landmarks (e.g., say, Plaza de la Independencia (Quito, Ecuador)).
 In cases when no geographical location was found in the tweet text, it then proceeds to process the geographical coordinates and the self-reported location string in user's profile metadata.
-Using this geocoding tool, we were able to extract tweets corresponding to $598,300$ unique locations from Latin America.
+%Using this geocoding tool, we were able to extract tweets corresponding to $598,300$ unique locations from Latin America.
 
 %To prepare a dataset of ground truth events for our study, we focused on specific types of disruptive societal events, such as natural disasters.
 %We assume that such events are the predominant reasons that can cause group absenteeism on social networks.
@@ -774,8 +774,8 @@ Venezuela & Baseline & 0.078 &0.053 & 0.059 \\
 \subsection{Performance}
 The data for this experiment was gathered for three countries experiencing major protest events, namely Brazil, Mexico and Venezuela, from Jan 2013 to Dec 2014. Taking the Gold Standard Report (GSR)~\cite{ramakrishnan2014beating} as representing ground truth, we applied our new graph wavelet approach as follows. For each day, we determine whether there is any anomaly. If there is, we
 identify the group of anomalous cities and compare this set
-with the GSR to determine if the selected cities actually experienced protest events on that day and thus show how many of the model's predictions matched the ground truth and how many did not. We use recall, precision, and the F-measure to evaluate the model's performance. To evaluate the effectiveness of our new graph wavelet approach, we also compared the results with those obtained using intuitive approaches such as frequency based random assignment, referred to here as the baseline model, and Z-score based selection methods. The baseline model was built according to the historical protest records for each city and thus the model's predictions of the future occurrence of protests were based on frequency. The z-score approach entails
-selecting the group of cities whose z-score crosses some threshold, say $|Z-score|>3$.
+with the GSR to determine if the selected cities actually experienced protest events on that day and thus show how many of the model's predictions matched the ground truth and how many did not. We use recall, precision, and the F-measure to evaluate the model's performance. To evaluate the effectiveness of our new graph wavelet approach, we also compared the results with those obtained using intuitive approaches such as frequency based random assignment, referred to here as the baseline model, and z-score based selection methods. The baseline model was built according to the historical protest records for each city and thus the model's predictions of the future occurrence of protests were based on frequency. The z-score approach entails
+selecting the group of cities whose z-score crosses some threshold, say $|z-score|>3$.
 
 
 We compared the performance of these three models over the two year test period; the overall results are shown in Table~\ref{table:models_compare}. Generally speaking, the new graph wavelet approach exhibited better precision, recall, and F-measure scores than the baseline model across all three countries. The mean F-measure for the graph wavelet detection across models and countries is greater than that achieved by either of the other prediction models. Interestingly, the graph wavelet approach appears to operate at different efficiency levels for each country. From Figure~\ref{fig:threecountry_performance} we can see that the graph wavelet model has a much higher recall in Venezuela than in Brazil, and an inferior quality of event detection in Mexico compared to Venezuela.
@@ -819,7 +819,7 @@ We compared the performance of these three models over the two year test period;
 
 
 \textbf{Case study 1: Iquique Earthquake, Chile.}
-On April 1, 2014 at around 8:46 PM (local time) a large earthquake struck off the coast of Chile, northwest of the port city of Iquique. We show the distribution of absenteeism scores and normalized wavelet coefficient values of the graph wavelets from the beginning of this event and throughout the subsequent 24 hour period. As shown in Figure~\ref{fig:absent_Chile_score}, we can clearly see absenteeism behavior, where the scores are dominated by very low (blue spectrum) Z-score values (indicating high absenteeism). Likewise, Figure~\ref{fig:absent_Chile_wavelet} depicts low coefficient values for the northern regions of Chile, where the impact of the earthquake was most significant. As the news of earthquake spread throughout the next day, user activity on social media increased. This bursty behavior is clearly visible on April 2nd, at around 11:00 AM. Figure~\ref{fig:burst_Chile_score} shows that the Z-scores increase (red spectrum) significantly and the coefficient value distribution (Figure~\ref{fig:burst_Chile_wavelet}) of the graph wavelets for northern regions of Chile are also in the red spectrum. The graph wavelet distributions in Figures~\ref{fig:absent_Chile_wavelet}~\ref{fig:burst_Chile_wavelet} show that the kernel area of the absenteeism/burst wavelets cover most large negative/positive values. In this way, the wavelets identify the abnormal negative/positive groups in absent/burst time intervals, respectively. Furthermore, a high correlation score of 0.726 was calculated for the wavelets from absenteeism and bursty periods of this episode, indicating a strong connection between the burst in activity and the previously observed absenteeism, signaling an event was detected.
+On April 1, 2014 at around 8:46 PM (local time) a large earthquake struck off the coast of Chile, northwest of the port city of Iquique. We show the distribution of absenteeism scores and normalized wavelet coefficient values of the graph wavelets from the beginning of this event and throughout the subsequent 24 hours period. As shown in Figure~\ref{fig:absent_Chile_score}, we can clearly see absenteeism behavior, where the scores are dominated by very low (blue spectrum) z-score values (indicating high absenteeism). Likewise, Figure~\ref{fig:absent_Chile_wavelet} depicts low coefficient values for the northern regions of Chile, where the impact of the earthquake was most significant. As the news of earthquake spread throughout the next day, user activity on social media increased. This bursty behavior is clearly visible on April 2nd, at around 11:00 AM. Figure~\ref{fig:burst_Chile_score} shows that the z-scores increase (red spectrum) significantly and the coefficient value distribution (Figure~\ref{fig:burst_Chile_wavelet}) of the graph wavelets for northern regions of Chile are also in the red spectrum. The graph wavelet distributions in Figures~\ref{fig:absent_Chile_wavelet}~\ref{fig:burst_Chile_wavelet} show that the kernel area of the absenteeism/burst wavelets cover most large negative/positive values. In this way, the wavelets identify the abnormal negative/positive groups in absent/burst time intervals, respectively. Furthermore, a high correlation score of 0.726 was calculated for the wavelets from absenteeism and bursty periods of this episode, indicating a strong connection between the burst in activity and the previously observed absenteeism, signaling an event was detected.
 
 
 
@@ -854,7 +854,7 @@ On April 1, 2014 at around 8:46 PM (local time) a large earthquake struck off th
 \end{figure}
 
 
-The graph wavelets generated during the absenteeism time period Figure~\ref{fig:absent_Chile_wavelet} have a central node located in the city of `Iquique'. Looking at the time series (Figure~\ref{fig:earthquake}) of Twitter activity for Iquique and the associated word clouds (see Figure~\ref{fig:earthquake-cloud}), we can see how events unfolded during the course of the earthquake. Strong absenteeism is observed from 8:45 PM to 9:20 PM. Examining user mobility via their geotagged tweets from the city of Iquique, on April 1, 2014, the user mobility fraction had increased by 15.4\%.
+The graph wavelets generated during the absenteeism time period Figure~\ref{fig:absent_Chile_wavelet} have a central node located in the city of `Iquique'. Looking at the time series (Figure~\ref{fig:earthquake}) of Twitter activity for Iquique and the associated word clouds (Figure~\ref{fig:earthquake-cloud}), we can see how events unfolded during the course of the earthquake. Strong absenteeism is observed from 8:45 PM to 9:20 PM. Examining user mobility via their geotagged tweets from the city of Iquique, on April 1, 2014, the user mobility fraction had increased by 15.4\%.
 
 
 \textbf{Case Study 2: Massive power outage in Venezuela.}
@@ -865,7 +865,7 @@ The scatter plots showing the distribution of absenteeism scores and wavelet coe
 Shortly after the absenteeism, we detected a huge burst in activity around 8:45 PM, signaled by the increased z-scores (low absenteeism) and coefficient values (Figures~\ref{fig:burst_Venezuela_score},~\ref{fig:burst_Venezuela_wavelet}). A correlation score of 0.617 was calculated when comparing the graph wavelets from the absentee and burst periods.
 
 
-The absenteeism related graph wavelets indicate that the city of Caracas was the central node. Taking a close look at the Twitter volume and Tweets from Caracas and surrounding cities, there is a sharp decline in user activity around 7:40 PM and then a huge spike starting at 8:45 PM. The word clouds for the Tweet content show a very similar story, with dominant words being `light' and `blackout'; the Spanish phrase `sin luz', which means `no light', became a trending hashtag \#sinluz on Twitter.
+The absenteeism related graph wavelets indicate that the city of Caracas was the central node. Taking a close look at the Twitter volume and tweets from Caracas and surrounding cities, there is a sharp decline in user activity around 7:40 PM and then a huge spike starting at 8:45 PM. The word clouds for the tweet content show a very similar story, with dominant words being `light' and `blackout'; the Spanish phrase `sin luz', which means `no light', became a trending hashtag \#sinluz on Twitter.
 
 
 
@@ -889,7 +889,7 @@ The absenteeism related graph wavelets indicate that the city of Caracas was the
 
 
 \textbf{Case Study 3: Christmas Day.}
-As noted earlier, absenteeism behavior may not always lead to a spike in activity. For example, our model detected strong absenteeism in social media activity for major holidays such as Christmas Day that was not followed by a bursty period in Twitter activity. This is likely because people tend to travel to visit family during the holidays. This is supported by low values of z-scores or high absenteeism in Figure~\ref{fig:absent_Argentina_score} and wavelet coefficients in Figure~\ref{fig:absent_Argentina_wavelet} with respect to Argentinian Tweets on December 25, 2013. Hence, no subsequent burst period was detected for this event. Interestingly as Christmas Day approached, Figure~\ref{fig:holiday-cloud} shows that user mobility gradually increases and the z-score decreases, signaling greater absenteeism. We used Pearson's correlation coefficient to measure the two time series and found a correlation score of -0.94.
+As noted earlier, absenteeism behavior may not always lead to a spike in activity. For example, our model detected strong absenteeism in social media activity for major holidays such as Christmas Day that was not followed by a bursty period in Twitter activity. This is likely because people tend to travel to visit family during the holidays. This is supported by low values of z-scores or high absenteeism in Figure~\ref{fig:absent_Argentina_score} and wavelet coefficients in Figure~\ref{fig:absent_Argentina_wavelet} with respect to Argentinian tweets on December 25, 2013. Hence, no subsequent burst period was detected for this event. Interestingly as Christmas Day approached, Figure~\ref{fig:holiday-cloud} shows that user mobility gradually increases and the z-score decreases, signaling greater absenteeism. We used Pearson's correlation coefficient to measure the two time series and found a correlation score of -0.94.
 
 \section{Discussion}
 \label{sec:conclusion}
